# anl-agents

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json  restore_git_repos.bat  restore_git_repos.sh
.github/workflows/: pypi.yml  test.yml  test_from_github.yml
src/anl_agents/: __init__.py  agents.py  registry.py
src/anl_agents/anl2024/antiagents/: __init__.py  antiagent.py
src/anl_agents/anl2024/carc/: __init__.py  carcagent.py
src/anl_agents/anl2024/susumu/: nayesian.py  nayesian2.py
src/anl_agents/anl2024/takafam/: __init__.py  shochan.py
src/anl_agents/anl2024/team_123/: __init__.py  nyan.py
src/anl_agents/anl2024/team_182/: __init__.py  missg.py
src/anl_agents/anl2024/team_186/: __init__.py  ilan.py  myagent.py
src/anl_agents/anl2024/team_191/: __init__.py  func.py  inegotiator.py  others.py
src/anl_agents/anl2024/team_199/: __init__.py  hard_chaos.py
src/anl_agents/anl2024/team_205/: __init__.py  kosagent.py
src/anl_agents/anl2024/team_209/: __init__.py  bargain_bot.py  bidding_strategy.py  opponent_model.py
src/anl_agents/anl2024/team_232/: __init__.py  tak.py
src/anl_agents/anl2024/team_234/: __init__.py  ardabot.py
src/anl_agents/anl2024/team_235/: __init__.py  group6.py
src/anl_agents/anl2024/team_236/: __init__.py  group7.py
src/anl_agents/anl2024/team_240/: __init__.py  bidbot.py
src/anl_agents/anl2024/team_moto/: __init__.py  uoagent.py
src/anl_agents/anl2024/team_renting/: __init__.py  renting2024.py
src/anl_agents/anl2024/team_twistin/: __init__.py  group5.py
src/anl_agents/anl2024/teamkb/: __init__.py  agentkb.py
src/anl_agents/anl2024/tipsonly/: __init__.py  katla_nir_aent.py
src/anl_agents/anl2024/tulsa_eulers/: __init__.py  goldie.py
src/anl_agents/anl2025/carc/: __init__.py
src/anl_agents/anl2025/chongqingagent/: __init__.py
src/anl_agents/anl2025/eoh/: __init__.py
src/anl_agents/anl2025/natures/: __init__.py
src/anl_agents/anl2025/team_156/: __init__.py
src/anl_agents/anl2025/team_271/: __init__.py
src/anl_agents/anl2025/team_273/: __init__.py
src/anl_agents/anl2025/team_278/: __init__.py
src/anl_agents/anl2025/team_287/: __init__.py
src/anl_agents/anl2025/team_291/: __init__.py
src/anl_agents/anl2025/team_300/: __init__.py  requirements.txt
src/anl_agents/anl2025/team_305/: __init__.py
src/anl_agents/anl2025/team_307/: __init__.py
src/anl_agents/anl2025/team_309/: __init__.py
src/anl_agents/anl2025/tema_kdy/: __init__.py
src/anl_agents/anl2026/: __init__.py
tests/: test_agents.py  test_agents2025.py  test_agents2026.py  test_anl_2026.py
(+137 files in other folders)
