[project]
name = "anl-agents"
version = "0.1.2"
requires-python = "~=3.11.0"
description = "Agents submitted to the ANL league of ANAC 2025 since 2024"
readme = "README.md"
dependencies = ["anl>=0.1.13", "anl2025>=0.1.6", "tensorflow", "torch", "numpy"]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
